PokerOnline/wwwroot/css/site.css
html, body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    width: 100%;
    height: 100%;
    background-color: #0F111B;
    color: lightyellow;
    overflow: hidden; /* Hide scrollbars */
}

.h1, h2, h3, h4, h5, h6 {
    color: lightyellow;
}

.accentFGCyan {
    color: #00FFC2;
}

.accentFGRed {
    color: #FF5D5D;
}

.accentBGCyan {
    background-color: #00FFC2;
}

.accentBGRed {
    background-color: #FF5D5D;
}

div {
    /*border: 2px solid #FFFFFF;*/
    border-radius: 25px;
    /*margin: 10px;*/
    padding: 10px;
}

    div.content {
        background-color: #45475b; /* 35363f */
    }

    div.simple_border {
        border: 1px solid #FFFFFF;
    }

    div.active {
        border: 5px solid #00FFC2;
    }

    div.disabled {
        background-color: #A8A8A8;
    }

input {
    border: 1px solid #FFFFFF;
    border-radius: 15px;
    height: 30px;
}

    input:active, input:focus {
        border: 1px solid #00FFC2;
        height: 30px;
    }

button {
    border: 3px solid #45475b;
    border-radius: 15px;
    font-weight: bold;
    height: 30px;
	min-height: 40px;
}

	button:hover {
		background-color: #FFF;
        border: 3px solid #00FFC2;
	}

div.vertical {
    display: inline-block;
}

div.vertical_flex {
	display: flex;
}

div.vertical button {
    width: 100%;
}

div.centered {
	/*background-color: #FFF;*/
	position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border: 5px, solid, #ffffff;
    padding: 10px;
}

/*app {
    position: relative;
    display: flex;
    flex-direction: column;
}*/

#blazor-error-ui {
    background-color: #A8A8A8;
    color: white;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 98%;
    z-index: 1000;
}

#blazor-error-ui .dismiss {
    cursor: pointer;
    position: absolute;
    right: 0.75rem;
    top: 0.5rem;
}

